Revert "Remove profiling flags"
This reverts commit e4a147e04e103adbe9f7b449f45ebd5afdff2a8b.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -54,8 +54,8 @@ config("libdawn_native_internal") {
   if (is_mac) {
     cflags_objcc = [ "-Wno-unguarded-availability" ]
   }
-  #cflags = [ "-g" ]
-  #ldflags = [ "-g" ]
+  cflags = [ "-g" ]
+  ldflags = [ "-g" ]
 }
 
 dawn_json_generator("libdawn_native_utils_gen") {
@@ -1078,7 +1078,7 @@ if (dawn_standalone) {
         deps += invoker.deps
       }
 
-     # ldflags = [ "-g" ]
+      ldflags = [ "-g" ]
     }
   }
 
